--- a/src/main/webapp/bsteeleMusicApp.html
+++ b/src/main/webapp/bsteeleMusicApp.html
@@ -17,7 +17,13 @@
         <script type="text/javascript" src="bsteelemusicapp/bsteelemusicapp.nocache.js"></script>
 
         <link type="text/css" rel="stylesheet" href="./css/bsteeleMusicApp.css" />
+<!--
+    todo: 
 
+    screen control screen
+    logging screen
+    
+-->
         <script>
             'use strict';
             
