only close to websockets

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -109,8 +109,11 @@
                 <td><button type="button" onclick="onNativeTap(event);" >Tap for BPM</button></td>
                 <td id="bpmTally">106</td>
             </tr>
-            <tr>
-                <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
+            
+             <tr>
+                <td><button type="button" onclick="onWebsocketTest(event);" >test websocket</button>
+                websocket response:</td>
+                <td id="websocketResponse"></td>
             </tr>
         </table>
 
