struggling with css, adjusted shell scripts

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -44,7 +44,7 @@
         </script>
     </head>
 
-    <body onload="onLoad();" style="background-color: lightgray;">
+    <body onload="onLoad();">
 
         <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
         <noscript>
