close, but no clear onReset() so login is on song page

--- a/src/main/webapp/lyrics.html
+++ b/src/main/webapp/lyrics.html
@@ -1489,7 +1489,7 @@
     <body onload="onLoad();">
 
         <div class="toc" >
-            <h1><a id="title" name="toc">Lyrics</a></h1>
+            <!--<h1><a id="title" name="toc">Lyrics</a></h1>-->
             <p>Search: <input type="search" id="searchEntry" placeholder="title or artist..." class="mediumTextEntry" >
                 &nbsp;
                 <span class="tooltip"><span style="font-weight: bold;">Read Song Files:</span> 
