barely have style functioning from resources

--- a/src/main/webapp/bassStudyTool.html
+++ b/src/main/webapp/bassStudyTool.html
@@ -33,8 +33,8 @@ longer file name text area
         <script type="text/javascript" src="bsteelemusicapp/bsteelemusicapp.nocache.js"></script>
 
 
-        <link rel="stylesheet" href="./css/bsteeleMusicApp.css" type="text/css"/>
-        <link rel="stylesheet" href="./css/bassWebpageStyleSheet.css" type="text/css"/>
+<!--        <link rel="stylesheet" href="./css/bsteeleMusicApp.css" type="text/css"/>
+        <link rel="stylesheet" href="./css/bassWebpageStyleSheet.css" type="text/css"/>-->
 
         <script src="./js/keyTone.js"></script>
         <script src="./js/uploadDate.js">
