--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
         <!-- be added before this line.                -->
         <script type="text/javascript" src="bsteelemusicapp/bsteelemusicapp.nocache.js"></script>
 
-        <link type="text/css" rel="stylesheet" href="./css/bsteeleMusicApp.css" />
+        <!--<link type="text/css" rel="stylesheet" href="./css/bsteeleMusicApp.css" />-->
         <!--
             todo: 
         
