--- a/src/main/webapp/lyrics.html
+++ b/src/main/webapp/lyrics.html
@@ -17,7 +17,7 @@
         <!-- be added before this line.                -->
         <!--<script type="text/javascript" src="bsteelemusicapp/bsteelemusicapp.nocache.js"></script>-->
 
-        <link rel="stylesheet" href="./css/bsteeleMusicApp.css" type="text/css"/>
+        <!--<link rel="stylesheet" href="./css/bsteeleMusicApp.css" type="text/css"/>-->
 
         <script type="text/javascript" src="./legacySongs.songlyrics" ></script>
 
