--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,15 +36,11 @@
             function log(arg) {
                 window.console.log(arg);
             }
-            
-            function onLoad(){
-               // log( "socket: "+window.WebSocket);
-            }
 
         </script>
     </head>
 
-    <body onload="onLoad();">
+    <body>
 
         <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
         <noscript>
@@ -53,7 +49,6 @@
             in order for this application to display correctly.
         </div>
         </noscript>
-     
 
     </body>
 </html>
