--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,6 +27,8 @@
         <script>
             'use strict';
 
+            let audioContext;
+
             function onNativeTap(event) {
 
                 let t = event.timeStamp / 1000; //  in units of seconds
@@ -38,7 +40,7 @@
             }
 
         </script>
-    </head>
+    </head >
 
     <body>
 
