--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,8 @@
         <meta name="keywords" content="bass,guitar,sheet music,audio">
         <meta name="author" content="Robert Steele, bsteele.com">
 
+        <script src="./js/AudioFilePlayer.js"></script>
+
         <!-- If you add any GWT meta tags, they must   -->
         <!-- be added before this line.                -->
         <script type="text/javascript" src="bsteelemusicapp/bsteelemusicapp.nocache.js"></script>
@@ -26,8 +28,6 @@
         -->
         <script>
             'use strict';
-
-            let audioContext;
 
             function onNativeTap(event) {
 
