started work on fontsizing, test for AudioFilePlayer constructor on mac

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,10 +32,14 @@
                 window.console.log(arg);
             }
 
+            function onLoad() {
+                window.AudioFilePlayer = AudioFilePlayer;
+            }
+
         </script>
     </head >
 
-    <body>
+    <body onload="onLoad();">
 
         <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
         <noscript>
