had to add MusicAnimationEvent to workaround GWT issues, in process

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,7 +33,7 @@
             }
 
             function onLoad() {
-                window.AudioFilePlayer = AudioFilePlayer;
+                window.AudioFilePlayer = AudioFilePlayer;   //  workaround for new ES6... for some environments, e.g. mac
             }
 
         </script>
