roughed in player view

--- a/src/main/webapp/bassStudyTool.html
+++ b/src/main/webapp/bassStudyTool.html
@@ -330,10 +330,10 @@ longer file name text area
                                     </select>
 
                                     <!--                                &nbsp;
-                                                                    <button type="submit" onclick="bass.onRepeatStart()" class="musicalButton" title="Start a repeated section."
+                                                                    <button type="submit" onclick="bass.onRepeatStart()" class="musicalButton" title="Start a repeated sectionVersion."
                                                                             >&#x1d106;</button>
                                                                     &nbsp;
-                                                                      <button type="submit" onclick="bass.onRepeatEnd()" class="musicalButton" title="End a repeated section."
+                                                                      <button type="submit" onclick="bass.onRepeatEnd()" class="musicalButton" title="End a repeated sectionVersion."
                                                                             >&#x1d107;</button>-->
                                 </td>
                             </tr>
@@ -625,7 +625,7 @@ longer file name text area
                     <li>Won't play through a rest at the end of a song on a loop.</li>
                     <li>Fix swing pair followed by beamed eighth note.</li>
                     <li>Reread options at every loop end.</li>
-                    <li>Introduce the notion of sections.  Start each section on the left.</li>
+                    <li>Introduce the notion of sections.  Start each sectionVersion on the left.</li>
                     <li>Chords are terrible.</li>
                     <li>Add triplets.</li>
                     <li>Use drum notes (X's) for custom rhythm</li>
@@ -639,10 +639,10 @@ longer file name text area
                     <li>Use sharps for notes out of scale when ascending.  Use flats when descending.  Prior note may be in prior bar.  Rests are skipped.</li>
                     <li>Lyrics on rests.</li>
                     <li>Add slurs</li>
-                    <li>Add copy section to OS cut buffer to paste in other instance.</li>
+                    <li>Add copy sectionVersion to OS cut buffer to paste in other instance.</li>
                     <li>Triplets</li>
                     <li>musical repeats</li>
-                    <li>section definition and playback sequencing.  Nashville'ish style?</li>
+                    <li>sectionVersion definition and playback sequencing.  Nashville'ish style?</li>
                     <li>Read and write custom rhythms to/from a file</li>
                     <li>remember custom notation</li>
                     <li>apply custom beat to existing song</li>
